[package]
name = "summary_medium_post"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "*", default-features = false, features = [
  "cookies",
  "json",
  "rustls-tls",
  "http2",
] }

tokio = { version = "1.22", features = ["full"] }
thiserror = "1.0.58"
regex = "1.10.4"
